Fri Dec  3 14:20:25 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/DataReaderStateListener_T.cpp:
        * connectors/dds4ccm/impl/Getter_T.cpp:
        * connectors/dds4ccm/impl/Updater_T.cpp:
          Replace some DDS_xxx defines with ::DDS::xxx defines. DDS_xxx defines
          are not allowed in the DDS4CCM core.

Fri Dec  3 13:01:04 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/PSAT/DDS_PSAT_Connector_T.h:
          Resolve compile issue related to the number of template variables.

Fri Dec  3 09:59:02 UTC 2010  Martin Corino  <corino_m@remedy.nl>

        * bin/ciao_tests.lst:
          Fixed typo in pathname.

Fri Dec  3 10:33:37 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/idl/dds_rtf2_dcps_i_handle.idl:
          All idl in this file is for NDDS

Fri Dec  3 10:21:40 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/dds4ccm.mpb:
        * MPC/config/dds4ccm_ts_default.mpb:
          Added flags for OpenDDS

Fri Dec  3 09:36:43 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/ami4ccm/tests/IDL_Test/Hello_Component.idl:
          Added another test component

Fri Dec  3 06:14:51 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/CCM_DataReader.cpp:
        * connectors/dds4ccm/impl/ConditionManager.cpp:
        * connectors/dds4ccm/impl/DDS_Base_Connector_T.h:
        * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
        * connectors/dds4ccm/impl/DDS_Event_Connector_T.h:
        * connectors/dds4ccm/impl/DDS_State_Connector_T.h:
        * connectors/dds4ccm/impl/DDS_Subscriber_Base_T.cpp:
        * connectors/dds4ccm/impl/DDS_TopicBase_Connector_T.h:
        * connectors/dds4ccm/impl/DDS_TopicBase_Connector_T.cpp:
        * connectors/dds4ccm/impl/ndds/TypeSupport.h:
        * connectors/dds4ccm/tests/MultiTopic/Connector/MultiTopic_Connector_T.h: